load("@rules_cc//cc:defs.bzl", "cc_binary")

package(features = ["layering_check"])

#cc_binary(
#    name = "cracker",
#    srcs = ["cracker.c"],
#    copts = ["-fopenmp"],
#    linkopts = ["-fopenmp"],
#    deps = [
#        "//c-toxcore/toxcore:ccompat",
#        "@libsodium",
#    ],
#)

cc_binary(
    name = "cracker_simple",
    srcs = ["cracker_simple.c"],
    deps = [
        "//c-toxcore/testing:misc_tools",
        "//c-toxcore/toxcore:ccompat",
        "@libsodium",
    ],
)

cc_binary(
    name = "minimal-save-generator",
    srcs = ["minimal-save-generator.c"],
    deps = [
        "//c-toxcore/toxcore:ccompat",
        "@libsodium",
    ],
)

cc_binary(
    name = "sign",
    srcs = ["sign.c"],
    copts = ["-w"],
    deps = [
        "//c-toxcore/testing:misc_tools",
        "//c-toxcore/toxcore:ccompat",
        "@libsodium",
    ],
)

cc_binary(
    name = "strkey",
    srcs = ["strkey.c"],
    copts = ["-w"],
    deps = [
        "@libsodium",
    ],
)

cc_binary(
    name = "save-generator",
    srcs = ["save-generator.c"],
    deps = [
        "//c-toxcore/testing:misc_tools",
        "//c-toxcore/toxcore",
        "//c-toxcore/toxcore:ccompat",
    ],
)
